--- a/Samples/Umbrella.AspNetCore.Samples/Views/DataAnnotations/Index.cshtml
+++ b/Samples/Umbrella.AspNetCore.Samples/Views/DataAnnotations/Index.cshtml
@@ -1,20 +1,29 @@
 ﻿@model DataAnnotationsModel
 
-<form asp-antiforgery="true" asp-action="Index" novalidate>
-    <div class="form-group">
-        <label asp-for="Required">Required</label>
-        <input asp-for="Required" type="text" class="form-control" />
-        <span asp-validation-for="Required"></span>
+@{
+    ViewData["Title"] = "Data Annotations";
+}
+
+<div class="row">
+    <div class="col-lg-12">
+        <h1>Data Annotations</h1>
+        <form asp-antiforgery="true" asp-action="Index" novalidate>
+            <div class="form-group">
+                <label asp-for="Required">Required</label>
+                <input asp-for="Required" type="text" class="form-control" />
+                <span asp-validation-for="Required"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="UmbrellaPostcode">Umbrella Postcode</label>
+                <input asp-for="UmbrellaPostcode" type="text" class="form-control" />
+                <span asp-validation-for="UmbrellaPostcode"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="UmbrellaPhone">Umbrella Phone</label>
+                <input asp-for="UmbrellaPhone" type="tel" class="form-control" />
+                <span asp-validation-for="UmbrellaPhone"></span>
+            </div>
+            <button class="btn btn-default" type="submit">Submit</button>
+        </form>
     </div>
-    <div class="form-group">
-        <label asp-for="UmbrellaPostcode">Umbrella Postcode</label>
-        <input asp-for="UmbrellaPostcode" type="text" class="form-control" />
-        <span asp-validation-for="UmbrellaPostcode"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="UmbrellaPhone">Umbrella Phone</label>
-        <input asp-for="UmbrellaPhone" type="tel" class="form-control" />
-        <span asp-validation-for="UmbrellaPhone"></span>
-    </div>
-    <button class="btn btn-default" type="submit">Submit</button>
-</form>
+</div>
