--- a/Samples/Umbrella.AspNetCore.Samples/Views/_ViewImports.cshtml
+++ b/Samples/Umbrella.AspNetCore.Samples/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Umbrella.AspNetCore.Samples
 @using Umbrella.AspNetCore.Samples.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Umbrella.AspNetCore.WebUtilities
+@addTagHelper *, Umbrella.AspNetCore.DynamicImage
 @inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet AppInsightsJs
