Tweaks to the samples site. Various refactorings. UmbrellaHostingEnvironment changes to allow the contents of a file to be read from disk and cached. Additions to the GenericEqualityComparer to allow a custom comparison delegate to be supplied. Fix to the Log4NetAdapter where the message builder was not instantiated!

--- a/Samples/Umbrella.AspNetCore.Samples/Views/Home/Index.cshtml
+++ b/Samples/Umbrella.AspNetCore.Samples/Views/Home/Index.cshtml
@@ -5,5 +5,6 @@
 <div class="row">
     <div class="col-lg-12">
         <h1>Welcome to Umbrella Samples</h1>
+        @Url.Action("Index", "Home")
     </div>
 </div>
