Added a secure nonce generator. Added new Guard methods. Added web related nonce constants. Added HtmlHelper, HttpContextBase and IOwinContext extensions to allow a default nonce stored against a request to be retrieved and output.

--- a/Samples/Umbrella.AspNet.Samples/Views/Shared/_Layout.cshtml
+++ b/Samples/Umbrella.AspNet.Samples/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Bundles.GetScript("~/content/js/main")
     @WebpackBundles.GetScript("main")
 </head>
-<body>
+<body data-nonce="@Html.GetCurrentRequestNonce()">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
