--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/FileImagePreviewUpload/UmbrellaFileImagePreviewUpload.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/FileImagePreviewUpload/UmbrellaFileImagePreviewUpload.razor
@@ -1,6 +1,4 @@
-﻿@using Umbrella.AspNetCore.Blazor.Components.FileUpload 
-
-<div class="u-file-image-preview-upload">
+﻿<div class="u-file-image-preview-upload">
 	@if (FileUploadMode == UmbrellaFileImagePreviewUploadMode.Upload)
 	{
 		<UmbrellaFileUpload OnRequestUpload="OnRequestUploadInner"
