Fixes. XML code docs (WIP)

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/ErrorStateView.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/ErrorStateView.razor
@@ -1,6 +1,4 @@
-﻿@inherits ErrorStateViewBase
-
-<div class="u-state-view u-state-view--error">
+﻿<div class="u-state-view u-state-view--error">
 	<p>@Message</p>
 	@if (OnReloadButtonClick.HasDelegate)
 	{
