--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/EmptyStateView.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/EmptyStateView.razor
@@ -1,5 +1,3 @@
-﻿@inherits EmptyStateViewBase
-
-<div class="u-state-view u-state-view--empty">
+﻿<div class="u-state-view u-state-view--empty">
 	<p>@Message</p>
 </div>
