--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/LoadingStateView.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/LoadingStateView.razor
@@ -1,5 +1,3 @@
-﻿@inherits LoadingStateViewBase
-
-<div class="u-state-view u-state-view--loading">
+﻿<div class="u-state-view u-state-view--loading">
 	<p>@Message</p>
 </div>
