Added XML Code Docs (WIP) Fixes.

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/ErrorStateView.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/ErrorStateView.razor
@@ -1,6 +1,6 @@
 ﻿<div class="u-state-view u-state-view--error">
 	<p>@Message</p>
-	@if (OnReloadButtonClick.HasDelegate)
+	@if (OnReloadButtonClick.HasDelegate && ShowReloadButton)
 	{
 		<button class="btn btn-primary" @onclick="async () => await OnReloadButtonClick.InvokeAsync(null)">Reload</button>
 	}
