--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -129,7 +129,7 @@
 		}
 		else
 		{
-			<ErrorStateView Message="@ErrorMessage" OnReloadButtonClick="ReloadButtonClick" />
+			<ErrorStateView Message="@ErrorMessage" OnReloadButtonClick="ReloadButtonClick" ShowReloadButton="ShowReloadButton" />
 		}
 	</div>
 </CascadingValue>
