Fixes XML code docs (WIP)

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/DynamicImage/UmbrellaDynamicImage.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/DynamicImage/UmbrellaDynamicImage.razor
@@ -1,4 +1,4 @@
-﻿@inherits UmbrellaDynamicImageBase
+﻿@inherits Umbrella.AspNetCore.Blazor.Components.ResponsiveImage.UmbrellaResponsiveImage
 
 <div class="u-dynamic-image @CssClass">
 	@if (!string.IsNullOrWhiteSpace(SrcSetValue))
