Changes to allow images to be lazy loaded.

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/DynamicImage/UmbrellaDynamicImage.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/DynamicImage/UmbrellaDynamicImage.razor
@@ -1,12 +1,5 @@
 ﻿@inherits Umbrella.AspNetCore.Blazor.Components.ResponsiveImage.UmbrellaResponsiveImage
 
 <div class="u-dynamic-image @CssClass">
-	@if (!string.IsNullOrWhiteSpace(SrcSetValue))
-	{
-		<img src="@SrcValue" srcset="@SrcSetValue" @attributes="AdditionalAttributes" />
-	}
-	else
-	{
-		<img src="@SrcValue" @attributes="AdditionalAttributes" />
-	}
+    <img src="@SrcValue" srcset="@SrcSetValue" loading="@(LazyLoadingEnabled ? "lazy" : null)" @attributes="AdditionalAttributes" />
 </div>
