--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/ResponsiveImage/UmbrellaResponsiveImage.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/ResponsiveImage/UmbrellaResponsiveImage.razor
@@ -1,10 +1,3 @@
 ﻿<div class="u-responsive-image @CssClass">
-	@if (!string.IsNullOrWhiteSpace(SrcSetValue))
-	{
-		<img src="@Url" srcset="@SrcSetValue" @attributes="AdditionalAttributes" />
-	}
-	else
-	{
-		<img src="@Url" @attributes="AdditionalAttributes" />
-	}
+    <img src="@Url" srcset="@SrcSetValue" loading="@(LazyLoadingEnabled ? "lazy" : null)" @attributes="AdditionalAttributes" />
 </div>
