--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/_Imports.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/_Imports.razor
@@ -1,4 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Forms
 @using Umbrella.AspNetCore.Blazor.Enumerations
+@using Umbrella.AspNetCore.Blazor.Components.Form
 @using Umbrella.AspNetCore.Blazor.Components.StateViews
 @using Umbrella.AspNetCore.Blazor.Components.Pagination
